--- a/views/index.tt
+++ b/views/index.tt
@@ -197,6 +197,17 @@ query.find({
     </ul>
 
 <script type="text/javascript">
+( function() {
+    CHITIKA = window.CHITIKA ? window.CHITIKA : { 'units' : [] };
+    CHITIKA.publisher = 'imyaman';
+    var s = document.createElement('script');
+    s.src = '//cdn.chitika.net/getads.js';
+    try { document.getElementsByTagName('head')[0].appendChild(s); } catch(e) { document.write(s.outerHTML); }
+}());
+</script>
+
+<!--
+<script type="text/javascript">
   ( function() {
     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
     var unit = {"calltype":"async[2]","publisher":"imyaman","width":550,"height":250,"sid":"dancer.youre.space"};
@@ -206,6 +217,7 @@ query.find({
 }());
 </script>
 <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+-->
 
   </div>
 </div>
