changed chitika unit mini blog

--- a/views/index.tt
+++ b/views/index.tt
@@ -197,27 +197,15 @@ query.find({
     </ul>
 
 <script type="text/javascript">
-( function() {
-    CHITIKA = window.CHITIKA ? window.CHITIKA : { 'units' : [] };
-    CHITIKA.publisher = 'imyaman';
-    var s = document.createElement('script');
-    s.src = '//cdn.chitika.net/getads.js';
-    try { document.getElementsByTagName('head')[0].appendChild(s); } catch(e) { document.write(s.outerHTML); }
-}());
-</script>
-
-<!--
-<script type="text/javascript">
   ( function() {
     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
-    var unit = {"calltype":"async[2]","publisher":"imyaman","width":550,"height":250,"sid":"dancer.youre.space"};
+    var unit = {"calltype":"async[2]","publisher":"imyaman","width":468,"height":60,"sid":"dance.youre.space"};
     var placement_id = window.CHITIKA.units.length;
     window.CHITIKA.units.push(unit);
     document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
 }());
 </script>
 <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
--->
 
   </div>
 </div>
