added clicksor disable mobile redirect

--- a/views/index.tt
+++ b/views/index.tt
@@ -209,6 +209,7 @@ query.find({
 
 <script type="text/javascript"> 
 clicksor_enable_adhere = false; 
+clicksor_mobile_redirect = false;
 
 clicksor_default_url = '';
 clicksor_banner_border = '#99CC33'; 
@@ -224,7 +225,7 @@ clicksor_text_link_color = '';
 clicksor_enable_text_link = false;
 		 
 clicksor_banner_text_banner = true;
-clicksor_banner_image_banner = true; 
+clicksor_banner_image_banner = false; 
 clicksor_enable_layer_pop = false;
 clicksor_enable_pop = false;
 </script>
