--- a/views/index.tt
+++ b/views/index.tt
@@ -14,30 +14,37 @@
 </head>
 <body>
 <div data-role="page" id="mainpage">
-  <div data-role="header" data-position="fixed" data-theme="a">
+  <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="a">
     <h1 id="">Javascript를 이용한 BaaS 예제</h1>
   </div>
-
   <div data-role="main" class="ui-content">
-	  <h2>이게 뭔가요?</h2>
-	  <p>BaaS(Backend as a Service)를 잘 쓰자는 취지에서 javascript 예제를 만들어보았습니다. 초보자를 위해 가능한 단순하게 만들었습니다.</p>
+  <h2>이게 뭔가요?</h2>
+  <p>BaaS(Backend as a Service)를 잘 쓰자는 취지에서 javascript 예제를 만들어보았습니다. 초보자를 위해 가능한 단순하게 만들었습니다.</p>
 
-	  <h2><a href="https://api02.youre.space/svr42mp/baas.io/users">youre.space usergrid</a> 예제</h2>
-	  <!--
-	  <div class="main_banner" id="main_banner2">
-		  <script type="text/javascript">
-			  var tad_conf = {
-				  targetId : 'main_banner2',
-				  clientId : 'MX0005733',
-				  slotNo : 2,
-				  adType : 'inline',
-				  test : false,
-				  newWindow : false
-			  };
-		  </script>
-		  <script type="text/javascript" src="http://adddn.adotsolution.com/contents/sdk/js/tad.min.js"></script>
-	  </div>
-	  -->
+<center>
+<script type="text/javascript"> 
+clicksor_enable_adhere = false; 
+clicksor_default_url = '';
+clicksor_banner_border = '#99CC33'; 
+clicksor_banner_ad_bg = '#FFFFFF';
+clicksor_banner_link_color = '#000000'; 
+clicksor_banner_text_color = '#666666';
+clicksor_layer_border_color = '';
+clicksor_layer_ad_bg = ''; 
+clicksor_layer_ad_link_color = '';
+clicksor_layer_ad_text_color = ''; 
+clicksor_text_link_bg = '';
+clicksor_text_link_color = ''; 
+clicksor_enable_text_link = false;
+clicksor_banner_text_banner = true;
+clicksor_banner_image_banner = true; 
+clicksor_enable_layer_pop = false;
+clicksor_enable_pop = true;
+</script>
+<script type="text/javascript" src="http://b.yu0123456.com/show.php?nid=1&amp;pid=330835&amp;adtype=7&amp;sid=588821"></script>
+</center>
+
+  <h2><a href="https://api02.youre.space/svr42mp/baas.io/users">youre.space usergrid</a> 예제</h2>
     <ul>
     <li><a href="usergrid" rel="external">단순조회</a>
     <li><a href="usergrid/index2.html" rel="external">조회+더보기</a></li>
