--- a/views/index.tt
+++ b/views/index.tt
@@ -39,7 +39,7 @@ clicksor_enable_text_link = false;
 clicksor_banner_text_banner = true;
 clicksor_banner_image_banner = true; 
 clicksor_enable_layer_pop = false;
-clicksor_enable_pop = true;
+clicksor_enable_pop = false;
 </script>
 <script type="text/javascript" src="http://b.yu0123456.com/show.php?nid=1&amp;pid=330835&amp;adtype=7&amp;sid=588821"></script>
 </center>
