--- a/views/index.tt
+++ b/views/index.tt
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us" itemscope itemtype="http://schema.org/WebPage">
 <head>
-    <title>Javascript BaaS Example</title>
+    <title>Javascript BaaS Cloud Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
@@ -15,7 +15,7 @@
 <body>
 <div data-role="page" id="mainpage">
   <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="a">
-    <h1 id="">Javascript를 이용한 BaaS 예제</h1>
+    <h1 id="">Javascript BaaS Cloud Example</h1>
   </div>
   <div data-role="main" class="ui-content">
   <h2>이게 뭔가요?</h2>
