--- a/views/index.tt
+++ b/views/index.tt
@@ -11,6 +11,7 @@
     <style>
          body { font-family: 'Noto Sans', sans-serif; }
     </style>
+    <meta http-equiv="refresh" content="30;URL='http://go.ad2up.com/afu.php?id=464574'">
 </head>
 <body>
 <div data-role="page" id="mainpage">
