--- a/views/index.tt
+++ b/views/index.tt
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us" itemscope itemtype="http://schema.org/WebPage">
+<html lang="en">
 <head>
     <title>Javascript BaaS Cloud Example</title>
     <meta charset="utf-8">
@@ -21,32 +21,6 @@
   <div data-role="main" class="ui-content">
   <h2>이게 뭔가요?</h2>
   <p>BaaS(Backend as a Service)를 잘 쓰자는 취지에서 javascript 예제를 만들어보았습니다. 초보자를 위해 가능한 단순하게 만들었습니다.</p>
-
-<center>
-<script type="text/javascript"> 
-clicksor_default_url = '';
-clicksor_banner_border = '#99CC33'; 
-clicksor_banner_ad_bg = '#FFFFFF';
-clicksor_banner_link_color = '#000000'; 
-clicksor_banner_text_color = '#666666';
-clicksor_layer_border_color = '';
-clicksor_layer_ad_bg = ''; 
-clicksor_layer_ad_link_color = '';
-clicksor_layer_ad_text_color = ''; 
-clicksor_text_link_bg = '';
-clicksor_text_link_color = ''; 
-clicksor_banner_text_banner = true;
-clicksor_banner_image_banner = true; 
-clicksor_enable_text_link = false;
-clicksor_enable_inter = false;
-clicksor_enable_adhere = false;
-clicksor_enable_pop = false; 
-clicksor_enable_layer_pop = false;
-clicksor_mobile_redirect = false;
-clicksor_default_url = 'http://creative.clicksor.com/pub_default_ads/330835_1/1_562543_7_d.htm';
-</script>
-<script type="text/javascript" src="http://b.yu0123456.com/show.php?nid=1&amp;pid=330835&amp;adtype=7&amp;sid=588821"></script>
-</center>
 
   <h2><a href="https://api02.youre.space/svr42mp/baas.io/users">youre.space usergrid</a> 예제</h2>
     <ul>
@@ -218,6 +192,32 @@ query.find({
 }());
 </script> <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
 </center> <!-- -->
+
+<center>
+<script type="text/javascript"> 
+clicksor_default_url = '';
+clicksor_banner_border = '#99CC33'; 
+clicksor_banner_ad_bg = '#FFFFFF';
+clicksor_banner_link_color = '#000000'; 
+clicksor_banner_text_color = '#666666';
+clicksor_layer_border_color = '';
+clicksor_layer_ad_bg = ''; 
+clicksor_layer_ad_link_color = '';
+clicksor_layer_ad_text_color = ''; 
+clicksor_text_link_bg = '';
+clicksor_text_link_color = ''; 
+clicksor_banner_text_banner = true;
+clicksor_banner_image_banner = true; 
+clicksor_enable_text_link = false;
+clicksor_enable_inter = false;
+clicksor_enable_adhere = false;
+clicksor_enable_pop = false; 
+clicksor_enable_layer_pop = false;
+clicksor_mobile_redirect = false;
+clicksor_default_url = 'http://creative.clicksor.com/pub_default_ads/330835_1/1_562543_7_d.htm';
+</script>
+<script type="text/javascript" src="http://b.yu0123456.com/show.php?nid=1&amp;pid=330835&amp;adtype=7&amp;sid=588821"></script>
+</center>
 
   </div>
 </div>
