--- a/views/index.tt
+++ b/views/index.tt
@@ -223,6 +223,6 @@ clicksor_default_url = 'http://creative.clicksor.com/pub_default_ads/330835_1/1_
 </div>
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <pre class="prettyprint"></pre>
-<script src="//go.mobtrks.com/notice.php?p=465962&interstitial=1"></script>
+<!-- script src="//go.mobtrks.com/notice.php?p=465962&interstitial=1"></script -->
 </body>
 </html>
