--- a/views/index.tt
+++ b/views/index.tt
@@ -1,105 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <title>usergrid js example</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <title>Perl과 Dancer2와 웹 API 서비스</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://milligram.github.io/css/milligram.min.css">
+    <link href='http://fonts.googleapis.com/earlyaccess/notosanskr.css' rel='stylesheet' type='text/css'>
+    <script src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
     <style>
-         body { font-family: 'Noto Sans', sans-serif; }
+      :lang(ko) { font-family: 'Noto Sans KR', sans-serif; }
     </style>
-    <meta http-equiv="refresh" content="30;URL='http://go.ad2up.com/afu.php?id=464574'">
 </head>
 <body>
-<div data-role="page" id="mainpage">
-  <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="a">
-    <h1 id="">usergrid js example</h1>
-  </div>
-  <div data-role="main" class="ui-content">
-  <h2>이게 뭔가요?</h2>
-  <p>BaaS(Backend as a Service)의 하나인 usergrid를 잘 쓰자는 취지에서 javascript 예제를 만들어보았습니다. 초보자를 위해 가능한 단순하게 만들었습니다.</p>
-
-  <h2><a href="https://api02.youre.space/svr42mp/baas.io/users">youre.space usergrid</a> 예제</h2>
-    <ul>
-    <li><a href="usergrid" rel="external">단순조회</a>
-    <li><a href="usergrid/index2.html" rel="external">조회+더보기</a></li>
-    <li><a href="usergrid/write.html" rel="external">쓰기</a></li>
-    </ul>
-데이터를 조회하는 부분. usergrid와 baas.io는 서로 비슷합니다.
-    <pre class="prettyprint">
-&lt;script src="js/usergrid.js"&gt;&lt;/script&gt;
-&lt;script&gt;
-$(document).ready(function() {
-    var client = new Usergrid.Client({
-        'URI':'https://api02.youre.space',
-        'orgName':'svr42mp', 
-        'appName':'baas.io',
-        //'token':baas_token
-    });
-
-    var options = {
-        'client':client,
-        'endpoint':'comments',
-        'qs':{
-            'ql':'order by created DESC'
-        }
-    }
-
-    client.request(options, function (err, data) {
-      if(!err){
-          drawCommentsTable(data.entities);
-      }else{
-          console.log(err.toString());
-      }
-    });
+<script>
+function checkmobile() {
+  var check = false;
+  (function(a){if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4)))check = true})(navigator.userAgent||navigator.vendor||window.opera);
+  return check;
 }
-    </pre>
+var ismobile = checkmobile();
 
-<center> <!-- -->
+  if(ismobile){
+    window.location="/mobile.html";
+  }
+</script>
+
+
+<h1>Perl과 Dancer2와 웹 API 서비스</h1>
+
+<h2>개요</h2>
+<p>PHP, Java, Python, JavaScript의 유행에서 떨어져, 오래된 것으로 꾸준히 하는 사람도 필요합니다. 바로 28년 넘게 발전해온 Perl 말입니다.<br />
+그 오래된 것을 새로 배우는 사람도 필요합니다. 사람들이 Perl을 접하게 만들고자 합니다.</p>
+
+<h2>목적</h2>
+<p>사람들이 Perl로 만들어진 서비스를 이용하고, 소스코드를 접하게 합니다.</p>
+
+<h2>세부내용</h2>
+<ul>
+<li>웹 API 서비스를 제공합니다.
+<li>돈 되지 않고, 보안에 문제 되지 않고, 그러면서 유용한 기능 또는 데이터를 제공합니다.
+<li>Perl과 Dancer2를 이용하여 만듭니다.
+<li>소스코드를 공개합니다.
+</ul>
+
+<h2>소스코드</h2>
+<p style="font-size: small;"><a href="http://github.com/imyaman/dancer.youre.space">http://github.com/imyaman/dancer.youre.space</a></p>
+
+<h2>API 목록</h2>
+<p style="font-size: small;"><a href="http://github.com/imyaman/dancer.youre.space">http://github.com/imyaman/dancer.youre.space</a>에서 확인해주십시오.</p>
+
+<h2>이용 예시</h2>
+
+<h3>curl</h3>
+<pre class="prettyprint" style="font-size: small;">
+curl -X GET -H 'Accept: application/json' \
+  http://dancer.youre.space/api/time
+curl -X GET -H 'Accept: text/html' \
+  http://dancer.youre.space/api/time
+curl -X GET -H 'Accept: text/x-yaml' \
+  http://dancer.youre.space/api/time
+curl -X GET -H 'Accept: text/xml' \
+  http://dancer.youre.space/api/time
+</pre>
+
+<h3>JavaScript</h3>
+<button id="btnTime">버튼을 클릭하면 시각을 확인하는 API를 호출합니다</button> <br />
+<span id="hereTime">Time is here, <br /></span>
+<script>
+$(document).ready(function(){
+  $("#btnTime").click(function(){
+    $.get("http://dancer.youre.space/api/time", 
+      function(data, status){
+    $("#hereTime").append(data.time + "<br />");
+    });
+  });
+});
+</script>
+<pre class="prettyprint" style="font-size: small;">
+$(document).ready(function(){
+  $("#btnTime").click(function(){
+    $.get("http://dancer.youre.space/api/time", 
+      function(data, status){
+    $("#hereTime").append(data.time + "&lt;br /&gt;");
+    });
+  });
+});
+</pre>
+
+<h2>내 컴퓨터에서 실행하기</h2>
+<p>소스코드를 다운로드 받습니다. perl을 설치합니다. Dancer 모듈을 설치합니다. 아래 명령으로 실행합니다.<br />
+$ perl app.psgi</p>
+
+<a href="//go.ad2up.com/afu.php?id=464574"><div style="width: 100%; height: 50px; background-color: green; text-align: center;">
+<h2>세상에서 제일 좋은 집은?</h2>
+</div></a>
+
+<center>
+<div class="main_banner" id="main_banner1">
+  <script type="text/javascript"> var tad_conf = { targetId : 'main_banner1', clientId : 'MX00048A1', slotNo : 2 }; </script>
+  <script type="text/javascript" src="http://adddn.adotsolution.com/contents/sdk/js/tad.min.js"></script>
+</div>
+</center>
+<!-- ad starts -->                
+<center>
+<script type="text/javascript">
+clicksor_enable_adhere = false;
+clicksor_enable_inter = false;
+clicksor_enable_layer_pop = false;
+clicksor_enable_pop = false;
+clicksor_enable_text_link = false;
+clicksor_banner_image_banner = true;
+clicksor_banner_text_banner = true;
+clicksor_layer_banner = false;
+clicksor_mobile_redirect = false;
+clicksor_default_url = '';
+clicksor_banner_border = '#000808';
+clicksor_banner_ad_bg = '#FFFFFF';
+clicksor_banner_link_color = '#080800';
+clicksor_banner_text_color = '#666666';
+</script>
+<script type="text/javascript" src="http://b.yu0123456.com/show.php?nid=1&amp;pid=330835&amp;adtype=7&amp;sid=588821"></script>
+
+<center>
 <script type="text/javascript">
   ( function() {
     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
-    var unit = {"calltype":"async[2]","publisher":"imyaman","width":320,"height":"auto","sid":"dance.youre.space","fluidH":true};
+    var unit = {"calltype":"async[2]","publisher":"imyaman","width":320,"height":50,"sid":"cal.youre.space"};
     var placement_id = window.CHITIKA.units.length;
     window.CHITIKA.units.push(unit);
     document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
 }());
-</script> <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
-</center> <!-- -->
-
-<center>
-<script type="text/javascript"> 
-clicksor_default_url = '';
-clicksor_banner_border = '#99CC33'; 
-clicksor_banner_ad_bg = '#FFFFFF';
-clicksor_banner_link_color = '#000000'; 
-clicksor_banner_text_color = '#666666';
-clicksor_layer_border_color = '';
-clicksor_layer_ad_bg = ''; 
-clicksor_layer_ad_link_color = '';
-clicksor_layer_ad_text_color = ''; 
-clicksor_text_link_bg = '';
-clicksor_text_link_color = ''; 
-clicksor_banner_text_banner = true;
-clicksor_banner_image_banner = true; 
-clicksor_enable_text_link = false;
-clicksor_enable_inter = false;
-clicksor_enable_adhere = false;
-clicksor_enable_pop = false; 
-clicksor_enable_layer_pop = false;
-clicksor_mobile_redirect = false;
-clicksor_default_url = 'http://creative.clicksor.com/pub_default_ads/330835_1/1_562543_7_d.htm';
 </script>
-<script type="text/javascript" src="http://b.yu0123456.com/show.php?nid=1&amp;pid=330835&amp;adtype=7&amp;sid=588821"></script>
+<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
 </center>
+<!-- ad ends -->
 
-  </div>
-</div>
-<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-<pre class="prettyprint"></pre>
-<!-- script src="//go.mobtrks.com/notice.php?p=465962&interstitial=1"></script -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- dancer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6681966312873395"
+     data-ad-slot="6601002462"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-77215441-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+<!-- script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script -->
 </body>
 </html>
